--- a/iters-web/src/main/resources/templates/page/dossier_my.html
+++ b/iters-web/src/main/resources/templates/page/dossier_my.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>个人档案</title>
-    <link rel="stylesheet" href="css/info-mgt.css" />
-    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="statics/assets/css/info-mgt.css" />
+    <link rel="stylesheet" href="statics/assets/css/base.css" />
     <style>
         *{margin: 0;padding: 0}
         .l_left{float: left}
         .clear{clear: both}
         a{text-decoration: none}
-        .title{  background:url(images/righttitlebig.png) repeat-x; border:1px solid #c1d3de; overflow:visible;}
+        .title{  background:url(statics/assets/images/righttitlebig.png) repeat-x; border:1px solid #c1d3de; overflow:visible;}
         .title h2{line-height:33px; margin-left:7px; padding-left:22px; font-weight:bold; font-size:14px; font-family:'宋体'; color:#000000; background:url(images/titleico.png) no-repeat left center;}
         .resource{border: 1px #c1d3de solid;border-top: none}
         .resource_main_top .resource_box{width: 10%;height: 130px;margin:0 1%;box-sizing: border-box}
@@ -46,7 +46,7 @@
 <div class="resource">
 <div class="resource_main">
     <div class="resource_main_top">
-    <div class="l_left resource_box"><a href="myfile_data.html" target="right">
+    <div class="l_left resource_box"><a href="myfile_data" target="right">
         <div class="img_div">
             <img src="images/myflie.png"/>
         </div>
@@ -54,7 +54,7 @@
 
     </a>
     </div>
-        <div class="l_left resource_box"><a href="myfile_data.html" target="right">
+        <div class="l_left resource_box"><a href="myfile_data" target="right">
             <div class="img_div">
                 <img src="images/myflie.png"/>
             </div>
@@ -62,7 +62,7 @@
 
         </a>
         </div>
-        <div class="l_left resource_box"><a href="myfile_data.html" target="right">
+        <div class="l_left resource_box"><a href="myfile_data" target="right">
             <div class="img_div">
                 <img src="images/myflie.png"/>
             </div>
