日志列表和添加功能

--- a/iters-web/src/main/resources/templates/page/home.html
+++ b/iters-web/src/main/resources/templates/page/home.html
@@ -297,7 +297,7 @@
             method: "get",
             striped: true,
             singleSelect: false,
-            url: "json/person.json",
+            url: "statics/assets/json/person.json",
             dataType: "json",
             pagination: true, //分页
             pageSize: 10,
