--- a/iters-web/src/main/resources/templates/page/work.html
+++ b/iters-web/src/main/resources/templates/page/work.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap-table.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/info-mgt.css" />
+    <link href="statics/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="statics/assets/css/bootstrap-table.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="statics/assets/css/base.css" />
+    <link rel="stylesheet" href="statics/assets/css/info-mgt.css" />
     <style>
-        .layui-layer-title{background:url(images/righttitlebig.png) repeat-x;font-weight:bold;color:#46647e; border:1px solid #c1d3de;height: 33px;line-height: 33px;}
+        .layui-layer-title{background:url(statics/assets/images/righttitlebig.png) repeat-x;font-weight:bold;color:#46647e; border:1px solid #c1d3de;height: 33px;line-height: 33px;}
         .tabe_bot label{width: 70px;text-align: right;font-size: 14px;font-weight: 900;color: #46647e}
         .l_left{float: left}
         .tabe_bot input,.tabe_bot  select{width: 180px;height: 30px;border-radius: 6px;margin:0 20px 0 0;border: none;border: 1px #ccc solid;text-indent: 1em}
@@ -28,24 +28,24 @@
     </div>
 </div>
 <div class="table-operate ue-clear">
-    <!--<a href="#" class="add"  onclick="getWorkTableData()">添加</a>-->
+    <a href="#" class="add"  onclick="addWork()">添加</a>
     <a href="javascript:;" class="out" onclick="outWork()">导出</a>
-    <!--<a href="javascript:;" class="edit">编辑</a>-->
-    <!--<a href="javascript:;" class="count">统计</a>-->
-    <!--<a href="javascript:;" class="check">审核</a>-->
+    <a href="javascript:;" class="edit">编辑</a>
+    <a href="javascript:;" class="count">统计</a>
+    <a href="javascript:;" class="check">审核</a>
 </div>
 <div class="table-box">
     <table id="table" class="table_style"></table>
 </div>
 <div class="pagination ue-clear"></div>
 </body>
-<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="statics/assets/js/jquery.js"></script>
 
-<script src="js/bootstrap.min.js"></script>
-<script src="js/bootstrap-table.js"></script>
-<script src="js/bootstrap-table-zh-CN.min.js"></script>
-<script src="js/date/js/laydate.js"></script>
-<script src="js/work.js"></script>
+<script src="statics/assets/js/bootstrap.min.js"></script>
+<script src="statics/assets/js/bootstrap-table.js"></script>
+<script src="statics/assets/js/bootstrap-table-zh-CN.min.js"></script>
+<script src="statics/assets/js/date/js/laydate.js"></script>
+<script src="statics/assets/js/work.js"></script>
 
 <script>
     !function(){
@@ -53,24 +53,21 @@
         laydate({elem: '#demo'});//绑定元素
     }();
 </script>
-<script src="js/layer_v2.1/layer/layer.js"></script>
-<!--<script type="text/javascript">-->
-
-    <!--function openlayer(id){-->
-        <!--layer.open({-->
-            <!--type: 2,-->
-            <!--title: '添加信息',-->
-            <!--shadeClose: true,-->
-            <!--shade: 0.5,-->
-            <!--skin: 'layui-layer-rim',-->
-<!--//            maxmin: true,-->
-            <!--closeBtn:1,-->
-            <!--area: ['80%', '75%'],-->
-            <!--shadeClose: true,-->
-            <!--closeBtn: 1,-->
-            <!--content: 'work_tail.html'-->
-            <!--//iframe的url-->
-        <!--});-->
-    <!--}-->
-<!--</script>-->
+<script src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
+<script type="text/javascript">
+    function openlayer(id){
+        layer.open({
+            type: 2,
+            title: '通知信息',
+            shadeClose: true,
+            shade: 0.5,
+            skin: 'layui-layer-rim',
+            closeBtn: 2,
+            area: ['98%', '98%'],
+            shadeClose: true,
+            closeBtn: 2,
+            content:"work_tail"
+        });
+    }
+</script>
 </html>
