--- a/iters-web/src/main/resources/templates/page/work_tail.html
+++ b/iters-web/src/main/resources/templates/page/work_tail.html
@@ -1,13 +1,12 @@
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>工作详情</title>
-    <link href="css/tail.css" rel="stylesheet" type="text/css" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="statics/assets/css/tail.css" rel="stylesheet" type="text/css" />
+    <link href="statics/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="statics/assets/js/jquery.js"></script>
     <script>
         function change() {
             var height01 = $(window).height();
@@ -17,8 +16,6 @@
 </head>
 
 <body style="border-radius: 8px" onload="change()">
-<!--<div class="title"><h2>通知详情</h2></div>-->
-<form id="form_demo" >
 <div class="top">
     <div>
         <div class="top_out">
@@ -26,19 +23,19 @@
                 <tbody>
                 <tr>
                     <td style="border-top: none">日志标题：<i class="i_start"></i></td>
-                    <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" name ="name" minlength="2"  required></td>
+                    <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" id="title" name ="name" minlength="2"  required></td>
                 </tr>
                 <tr>
                     <td>编号：<i class="i_start"></i></td>
-                    <td  style="text-align: left"><input type="text" name ="name" minlength="2"  required></td>
+                    <td  style="text-align: left"><input type="text"  name ="name" minlength="2"  required></td>
                     <td>发布人：</td>
-                    <td colspan = "3" style="text-align: left"><input type="text" class="long_text"></td>
+                    <td colspan = "3" style="text-align: left"><input type="text" id="publisher" class="long_text"></td>
                 </tr>
                 <tr>
                     <td>执行时间：</td>
-                    <td  style="text-align: left"><input type="text"></td>
+                    <td  style="text-align: left"><input type="text" id="performTime"></td>
                     <td>执行人：</td>
-                    <td colspan = "3" style="text-align: left"><input type="text" class="long_text"></td>
+                    <td colspan = "3" style="text-align: left"><input type="text" id="performBy" class="long_text"></td>
                 </tr>
                 <tr>
                     <td style="line-height: 340px">发布内容：</td>
@@ -49,16 +46,15 @@
         </div>
     </div>
     <div class="bot_btn">
-        <input type="submit" class="btn" value="保存">
-        <button class="btn btn1"><a href="notice.html" target="right">返回</a></button>
+        <input type="button" class="btn" onclick="button()" value="保存">
+        <button class="btn btn1"><a href="work" target="right">返回</a></button>
     </div>
 </div>
-</form>
 </body>
-<script type="text/javascript" src="js/jquery.js"></script>
-<script src="js/utf8-php/ueditor.config.js"></script>
-<script src="js/utf8-php/ueditor.all.min.js"></script>
-
+<script type="text/javascript" src="statics/assets/js/jquery.js"></script>
+<script src="statics/assets/js/utf8-php/ueditor.config.js"></script>
+<script src="statics/assets/js/utf8-php/ueditor.all.min.js"></script>
+<script src="statics/assets/js/date/js/laydate.js"></script>
 <script >
     var ue = UE.getEditor('editor');
     function isFocus(e){
@@ -168,13 +164,34 @@
     }
 </script>
 <script >
-//$.validator.setDefaults({
-//submitHandler: function() {
-//alert("修改成功");
-//}
-//});
-$().ready(function() {
-$("#form_demo").validate();
-});
+    !function(){
+        laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
+        laydate({elem: '#performTime'});//绑定元素
+    }();
+function button() {
+    var title = $('#title').val();
+    var publisher = $('#publisher').val();
+    var content = UE.getEditor('editor').getContent()
+    console.log(content);
+    var performTime = $('#performTime').val();
+    var performBy = $('#performBy').val();
+    var data = {
+        title:title,publisher:publisher,content:content,performTime:performTime,performBy:performBy
+    }
+    $.ajax({
+        type: "POST",
+        url: "journal/create",
+        data: data,
+        dataType: "json",
+        success: function (result) {
+            if (result.code == 100) {
+                location.href = parent.location.href = 'work';
+
+            } else {
+                console.log(result.message);
+            }
+        }
+    });
+}
 </script>
 </html>
