--- a/iters-web/src/main/resources/templates/page/work_tail.html
+++ b/iters-web/src/main/resources/templates/page/work_tail.html
@@ -166,7 +166,7 @@
 <script >
     !function(){
         laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
-        laydate({elem: '#performTime'});//绑定元素
+        laydate({elem: '#performTime',istime:true});//绑定元素
     }();
 function button() {
     var title = $('#title').val();
