--- a/iters-web/src/main/resources/templates/page/work_tail.html
+++ b/iters-web/src/main/resources/templates/page/work_tail.html
@@ -33,7 +33,7 @@
                 </tr>
                 <tr>
                     <td>执行时间：</td>
-                    <td  style="text-align: left"><input type="text" id="performTime"></td>
+                    <td  style="text-align: left"><input type="text" autocomplete="off" id="performTime"  ></td>
                     <td>执行人：</td>
                     <td colspan = "3" style="text-align: left"><input type="text" id="performBy" class="long_text"></td>
                 </tr>
@@ -166,7 +166,7 @@
 <script >
     !function(){
         laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
-        laydate({elem: '#performTime',istime:true});//绑定元素
+        laydate({elem: '#performTime',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
     }();
 function button() {
     var title = $('#title').val();
