日志删除功能

--- a/iters-web/src/main/resources/templates/page/work.html
+++ b/iters-web/src/main/resources/templates/page/work.html
@@ -29,6 +29,7 @@
 </div>
 <div class="table-operate ue-clear">
     <a href="#" class="add"  onclick="addWork()">添加</a>
+<!--    <a href="#" class="delete"  onclick="delWork()">删除</a>-->
     <a href="javascript:;" class="out" onclick="outWork()">导出</a>
     <a href="javascript:;" class="edit">编辑</a>
     <a href="javascript:;" class="count">统计</a>
