--- a/iters-web/src/main/resources/templates/page/notice.html
+++ b/iters-web/src/main/resources/templates/page/notice.html
@@ -19,6 +19,7 @@
 <body onload="Workload()">
 <div class="title"><h2>通知管理</h2></div>
 <div class="query">
+    <input type="text" id="id" style="display: none" value>
     <div class="tabe_bot">
         <div class="l_left"><label>标题：</label><input type="text" placeholder="请输入标题" id="title"></div>
         <div class="l_left"><label>发布人：</label><input type="text" placeholder="请输入发布人" id="publishBy"></div>
@@ -29,7 +30,7 @@
 </div>
 <div class="table-operate ue-clear">
     <a href="#" class="add" onclick="openlayer()">添加</a>
-    <!--<a href="javascript:;" class="del" onclick="delNotice(id)">删除</a>-->
+    <!--<a href="#" class="edit" onclick="openlayer()">编辑</a>-->
 </div>
 <div class="table-box">
     <table id="table" class="table_style"></table>
@@ -50,20 +51,5 @@
         laydate.skin('danlan');//切换皮肤，请查看skins下面皮肤库
         laydate({elem: '#publishTime',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
     }();
-
-    function openlayer() {
-        layer.open({
-            type: 2,
-            title: '通知信息',
-            shadeClose: true,
-            shade: 0.5,
-            skin: 'layui-layer-rim',
-            closeBtn: 2,
-            area: ['98%', '98%'],
-            shadeClose: true,
-            closeBtn: 2,
-            content: 'notic_tail'
-        });
-    }
 </script>
 </html>
