--- a/iters-web/src/main/resources/templates/page/notice.html
+++ b/iters-web/src/main/resources/templates/page/notice.html
@@ -49,7 +49,7 @@
 <script>
     !function(){
         laydate.skin('danlan');//切换皮肤，请查看skins下面皮肤库
-        laydate({elem: '#publishTime',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
+        laydate({elem: '#publishTime'});//绑定元素
     }();
 </script>
 </html>
