--- a/iters-web/src/main/resources/templates/page/work.html
+++ b/iters-web/src/main/resources/templates/page/work.html
@@ -11,7 +11,7 @@
         .tabe_bot label{width: 70px;text-align: right;font-size: 14px;font-weight: 900;color: #46647e}
         .l_left{float: left}
         .tabe_bot input,.tabe_bot  select{width: 180px;height: 30px;border-radius: 6px;margin:0 20px 0 0;border: none;border: 1px #ccc solid;text-indent: 1em}
-        .tabe_btn{width: 60px;height: 30px;background-color: #68b86c;border: none;border-radius: 6px;color: #fff}
+        .tabe_btn{width: 60px;height: 30px;background-color: #343fb8;border: none;border-radius: 6px;color: #fff}
     </style>
     <title>工作日志</title>
 </head>
@@ -31,7 +31,7 @@
     <a href="#" class="add"  onclick="addWork()">添加</a>
 <!--    <a href="#" class="delete"  onclick="delWork()">删除</a>-->
     <a href="javascript:;" class="out" onclick="outWork()">导出</a>
-    <a href="javascript:;" class="edit">编辑</a>
+    <a href="javascript:;" class="edit" onclick="editWork()">编辑</a>
     <a href="javascript:;" class="count">统计</a>
     <a href="javascript:;" class="check">审核</a>
 </div>
