--- a/iters-web/src/main/resources/templates/page/notic_tail.html
+++ b/iters-web/src/main/resources/templates/page/notic_tail.html
@@ -6,7 +6,9 @@
     <title>通知详情</title>
     <link href="statics/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="statics/assets/css/tail.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="statics/assets/js/jquery.js"></script>
+    <link href="statics/assets/css/common.css" rel="stylesheet" type="text/css" />
+    <link href="statics/plugins/ztree/css/zTreeStyle/zTreeStyle.css" rel="stylesheet" type="text/css" />
+
     <style>
         .partBox {
             position: absolute;
@@ -188,25 +190,28 @@
         <button class="btn btn1"><a href="notice" target="right">返回</a></button>
     </div>
 
-    <!--<div class="l-modal-bg" id="l-modal-bg"></div>-->
-    <!--<div class="l-modal" id="stu-dep">-->
-        <!--<div class="l-modal-query" style="width:800px;">-->
-            <!--<div class="l-modal-close"></div>-->
-            <!--<div class="l-modal-title"></div>-->
-            <!--<div class="l-modal-content">-->
-
-            <!--</div>-->
-            <!--<div class="l-modal-btns">-->
-                <!--<button class="l-modal-sure l-modal-btn" id="sureCheck">确认</button>-->
-                <!--<button class="l-modal-cancel l-modal-btn">取消</button>-->
-            <!--</div>-->
-            <!--<div class="h40"></div>-->
-        <!--</div>-->
-    <!--</div>-->
+    <div class="l-modal-bg" id="l-modal-bg"></div>
+    <div class="l-modal" id="stu-dep">
+        <div class="l-modal-query" style="width:800px;">
+            <div class="l-modal-close"></div>
+            <div class="l-modal-title"></div>
+            <div class="l-modal-content">
+                <div>
+                    <ul id="regionZTree" class="ztree"></ul>
+                </div>
+            </div>
+            <div class="l-modal-btns">
+                <button class="l-modal-sure l-modal-btn" id="sureCheck">确认</button>
+                <button class="l-modal-cancel l-modal-btn">取消</button>
+            </div>
+            <div class="h40"></div>
+        </div>
+    </div>
 </div>
 
 </body>
-<script type="text/javascript" src="statics/assets/js/jquery.js"></script>
+<script type="text/javascript" src="statics/libs/jquery.min.js"></script>
+<script type="text/javascript" src="statics/plugins/ztree/jquery.ztree.all.min.js"></script>
 <script src="statics/assets/js/utf8-php/ueditor.config.js"></script>
 <script src="statics/assets/js/utf8-php/ueditor.all.min.js"></script>
 <script src="statics/assets/js/jquery-validation-1.14.0/dist/jquery.validate.min.js" charset="utf-8"></script>
@@ -332,7 +337,7 @@
     function button() {
         var id = $('#no').val()
         var title = $('#title').val();
-        var depId = $('#depId').val();
+        var depId = $('#depId').attr("data-id");
         var content = UE.getEditor('editor').getContent()
         console.log(content);
         var publishBy = $('#publishBy').val();
@@ -361,28 +366,83 @@
             }
         });
     }
-
     var id = window.parent.document.getElementById("id").value;
-    $.ajax({
-        type: "GET",
-        url: "publish/query/"+id,
-        dataType: "json",
-        success: function (result) {
-            if (result.code == 100) {
-               $('#title').val(result.data.title);
-                $('#depId').val(result.data.depId);
-                $('#no').val(result.data.id);
-                $('#publishBy').val(result.data.publishBy);
-               $('#publishTime').val(result.data.publishTime);
-                UE.getEditor('editor').addListener("ready", function () {
-                    //赋值
-                    UE.getEditor('editor').setContent(result.data.content);
-                })
-            } else {
-                console.log(result.message);
+    if (!!id) {
+        $.ajax({
+            type: "GET",
+            url: "publish/query/" + id,
+            dataType: "json",
+            success: function (result) {
+                if (result.code == 100) {
+                    $('#title').val(result.data.title);
+
+                    $('#depId').val(result.data.depName);
+                    $('#depId').attr("data-id",result.data.depId);
+                    $('#no').val(result.data.id);
+                    $('#publishBy').val(result.data.publishBy);
+                    $('#publishTime').val(result.data.publishTime);
+                    UE.getEditor('editor').addListener("ready", function () {
+                        //赋值
+                        UE.getEditor('editor').setContent(result.data.content);
+                    })
+                } else {
+                    console.log(result.message);
+                }
             }
+        });
+    }
+    var setting = {
+        view: {
+            dblClickExpand: false,//双击节点时，是否自动展开父节点的标识
+            showLine: true,//是否显示节点之间的连线
+            fontCss:{'color':'black','font-weight':'bold'},//字体样式函数
+            selectedMulti: true //设置是否允许同时选中多个节点
+        },
+        check:{
+            enable: true,
+            chkStyle: "radio",
+            radioType: "all"
+        },
+        data: {
+            simpleData: {//简单数据模式
+                enable:true,
+                idKey: "id",
+                pIdKey: "parentId",
+                name: "name",
+                rootPId: null
+            }
+        },
+        callback:{
+            onCheck: onCheck
         }
+
+    };
+
+    $(document).ready(function() {
+        $.ajax({
+            type: "GET",
+            url: "department/listTree",
+            dataType: "json",
+            success: function (result) {
+                if (result.code == 100) {
+                    $.fn.zTree.init($("#regionZTree"), setting, result.data);
+                } else {
+                    console.log(result.message);
+                }
+            }
+        });
+
     });
+
+    function onCheck(e,treeId,treeNode){
+        var treeObj=$.fn.zTree.getZTreeObj("regionZTree"),
+            nodes=treeObj.getCheckedNodes(true),
+            v="";
+        for(var i=0;i<nodes.length;i++){
+            $('#regionZTree').attr("data-id",nodes[i].id);
+            $('#regionZTree').attr("data-name",nodes[i].name);
+        }
+    }
 
 </script>
 </html>
