编辑jquery部分逻辑代码

--- a/iters-web/src/main/resources/templates/page/work.html
+++ b/iters-web/src/main/resources/templates/page/work.html
@@ -70,5 +70,12 @@
             content:"work_tail"
         });
     }
+    function editorButton() {debugger;
+        var title = $('#title').val();
+        alert(title)
+        if(title==""||title==null){
+            alert("日志标题不能为空！")
+        }
+    }
 </script>
 </html>
