--- a/iters-web/src/main/resources/templates/page/work_tail.html
+++ b/iters-web/src/main/resources/templates/page/work_tail.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="bot_btn">
-        <input type="button" class="btn" onclick="button()" value="保存">
+        <input type="button" class="btn" id="editButton" onclick="button()" value="保存">
         <button class="btn btn1"><a href="work" target="right">返回</a></button>
     </div>
 </div>
@@ -168,6 +168,8 @@
         laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
         laydate({elem: '#performTime',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
     }();
+
+    /*日志模块添加jquery逻辑代码*/
     function button() {debugger;
         var title = $('#title').val();
         if(title==""||title==null){
