档案管理功能

--- a/iters-web/src/main/resources/templates/page/mywork.html
+++ b/iters-web/src/main/resources/templates/page/mywork.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap-table.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/info-mgt.css" />
+    <link href="statics/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="statics/assets/css/bootstrap-table.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="statics/assets/css/base.css" />
+    <link rel="stylesheet" href="statics/assets/css/info-mgt.css" />
     <style>
-        .layui-layer-title{background:url(images/righttitlebig.png) repeat-x;font-weight:bold;color:#46647e; border:1px solid #c1d3de;height: 33px;line-height: 33px;}
+        .layui-layer-title{background:url(statics/assets/images/righttitlebig.png) repeat-x;font-weight:bold;color:#46647e; border:1px solid #c1d3de;height: 33px;line-height: 33px;}
         .tabe_bot label{width: 70px;text-align: right;font-size: 14px;font-weight: 900;color: #46647e}
         .l_left{float: left}
         .tabe_bot input,.tabe_bot  select{width: 180px;height: 30px;border-radius: 6px;margin:0 20px 0 0;border: none;border: 1px #ccc solid;text-indent: 1em}
@@ -39,13 +39,13 @@
 </div>
 <div class="pagination ue-clear"></div>
 </body>
-<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="statics/assets/js/jquery.js"></script>
 
-<script src="js/bootstrap.min.js"></script>
-<script src="js/bootstrap-table.js"></script>
-<script src="js/bootstrap-table-zh-CN.min.js"></script>
-<script src="js/date/js/laydate.js"></script>
-<script src="js/mywork.js"></script>
+<script src="statics/assets/js/bootstrap.min.js"></script>
+<script src="statics/assets/js/bootstrap-table.js"></script>
+<script src="statics/assets/js/bootstrap-table-zh-CN.min.js"></script>
+<script src="statics/assets/js/date/js/laydate.js"></script>
+<script src="statics/assets/js/mywork.js"></script>
 
 <script>
     !function(){
@@ -53,7 +53,7 @@
         laydate({elem: '#demo'});//绑定元素
     }();
 </script>
-<script src="js/layer_v2.1/layer/layer.js"></script>
+<script src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
 <!--<script type="text/javascript">-->
 
     <!--function openlayer(id){-->
