--- a/iters-web/src/main/resources/templates/page/dossier_my.html
+++ b/iters-web/src/main/resources/templates/page/dossier_my.html
@@ -11,7 +11,7 @@
         .clear{clear: both}
         a{text-decoration: none}
         .title{  background:url(statics/assets/images/righttitlebig.png) repeat-x; border:1px solid #c1d3de; overflow:visible;}
-        .title h2{line-height:33px; margin-left:7px; padding-left:22px; font-weight:bold; font-size:14px; font-family:'宋体'; color:#000000; background:url(images/titleico.png) no-repeat left center;}
+        .title h2{line-height:33px; margin-left:7px; padding-left:22px; font-weight:bold; font-size:14px; font-family:'宋体'; color:#000000; background:url(statics/assets/images/titleico.png) no-repeat left center;}
         .resource{border: 1px #c1d3de solid;border-top: none}
         .resource_main_top .resource_box{width: 10%;height: 130px;margin:0 1%;box-sizing: border-box}
         .resource_box a{display: block;width: 100%;height: 100%;cursor: pointer;border: 2px #ccc solid;box-shadow: 4px 4px 5px rgba(182,185,187,0.6)}
@@ -39,63 +39,60 @@
 <body onload="change()" onresize="change()">
 <div class="title"><h2>个人档案</h2></div>
 <div class="table-operate ue-clear">
-    <a href="#" class="add"  onclick="openlayer()" id="addPup">添加</a>
+    <a href="#" class="add" id="addPup">添加</a>
     <a href="javascript:;" class="del">删除</a>
 
 </div>
 <div class="resource">
 <div class="resource_main">
     <div class="resource_main_top">
-    <div class="l_left resource_box"><a href="myfile_data" target="right">
-        <div class="img_div">
-            <img src="images/myflie.png"/>
-        </div>
-        <p style="text-align: center;font-weight: bold">私人资料</p>
-
-    </a>
     </div>
-        <div class="l_left resource_box"><a href="myfile_data" target="right">
-            <div class="img_div">
-                <img src="images/myflie.png"/>
-            </div>
-            <p style="text-align: center;font-weight: bold">工作文档</p>
-
-        </a>
-        </div>
-        <div class="l_left resource_box"><a href="myfile_data" target="right">
-            <div class="img_div">
-                <img src="images/myflie.png"/>
-            </div>
-            <p style="text-align: center;font-weight: bold">项目资料</p>
-
-        </a>
-        </div>
-
-
-
-    </div>
-
-
-
 </div>
 </div>
 <div class="pup_div01" id="pup01">
     <h5 class="h_style01">添加信息</h5>
-    <p><label class="label01">文件名称：</label><i class="i_start"></i> <input type="text" placeholder="请输入项目名称" class="pup_input"/></p>
-    <p><label class="label01">项目类型：</label><i class="i_start"></i> <select>
-        <option>请选择类型</option>
-    </select></p>
-    <p><label class="label01">上传图片：</label><i class="i_start"></i> <input type="file" /></p>
-    <p><label class="label01">是否有效：</label><a class="radio_a">有效</a><input type="radio" class="radio_input" name="select01" checked="checked"/><a class="radio_a"style="margin-left: 15px;">无效</a><input type="radio" class="radio_input" name="select01"/></p>
-    <p><label class="label01 note_label">备注：</label><textarea class="textarea01"></textarea></p>
+    <p><label class="label01">文件名称：</label><i class="i_start"></i> <input type="text" placeholder="请输入项目名称" class="pup_input" id="name"/></p>
+    <!--<p><label class="label01">项目类型：</label><i class="i_start"></i> <select>-->
+        <!--<option>请选择类型</option>-->
+    <!--</select></p>-->
+    <p><label class="label01">上传图片：</label><i class="i_start"></i> <input type="file" id="file" /></p>
+    <p><label class="label01">是否有效：</label><a class="radio_a">有效</a><input type="radio" class="radio_input" name="select01" value="1" checked="checked"/><a class="radio_a"style="margin-left: 15px;">无效</a><input type="radio" class="radio_input" value="0" name="select01"/></p>
+    <p><label class="label01 note_label">备注：</label><textarea id="descs" class="textarea01"></textarea></p>
     <div class="p_line">
-        <p class="p_but"><input type="button" value="保存" class="save_but"/><input type="button" value="关闭" class="close_but" id="close01"/></p>
+        <p class="p_but"><input type="button" onclick="addPersonalFile()" value="保存" class="save_but"/><input type="button" value="关闭" class="close_but" id="close01"/></p>
     </div>
 
 </div>
 </body>
-<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="statics/assets/js/jquery.js"></script>
 <script>
+    function init() {
+        $.ajax({
+            type: "GET",
+            url: "personalFile/list/"+1,
+            dataType: "json",
+            success: function (result) {
+                if (result.code == 100) {
+                    var html = '';
+                    $('.resource_main_top').find("div").remove();
+                    $.each(result.data, function (i, value) {
+                        html = html + "<div class=\"l_left resource_box\"><a href=\"myfile_data?id=" + value.id + "\" target=\"right\">\n" +
+                            "        <div class=\"img_div\">\n" +
+                            "            <img src=\"" + value.url + "\"\/>\n" +
+                            "        </div>\n" +
+                            "        <p style=\"text-align: center;font-weight: bold\">" + value.name + "</p>\n" +
+                            "\n" +
+                            "    </a>\n" +
+                            "    </div>"
+                    })
+                    $('.resource_main_top').append(html);
+                } else {
+                    console.log(result.message);
+                }
+            }
+        });
+    }
+    init();
     function change() {
         var height = $(document).height();
         $(".resource").css("height", height - 36 + "px");
@@ -105,14 +102,50 @@
     $(function () {
         $("#addPup").click(function () {
             $("#pup01").show();
-
-
         })
         $("#close01").click(function () {
             $("#pup01").hide();
-
         })
-
     })
+    function addPersonalFile() {
+        var name = $('#name').val();
+        var formdata = new FormData();
+        formdata.append("file", $('#file')[0].files[0]);
+        var isValid = $('input:radio:checked').val();
+        var descs = $('#descs').val();
+        $.ajax({
+            type: "POST",
+            url: "personalFile/fileUpload",
+            data: formdata,
+            contentType: false, // 不设置内容类型
+            processData: false, // 不处理数据
+            dataType: "json",
+            success: function (result) {
+                if (result.code == 100) {
+                    var data = {
+                        "name": name,"isValid": isValid,"descs": descs,"url":result.data,fileType:1
+                    }
+                    $.ajax({
+                        type: "POST",
+                        url: "personalFile/create",
+                        data: data,
+                        dataType: "json",
+                        success: function (result) {
+                            if (result.code == 100) {
+                                $("#pup01").hide();
+                                init();
+                            } else {
+                                console.log(result.message);
+                            }
+                        }
+                    });
+                } else {
+                    console.log(result.message);
+                }
+            }
+        });
+
+
+    }
 </script>
 </html>
