--- a/iters-web/src/main/resources/templates/page/myfile_data.html
+++ b/iters-web/src/main/resources/templates/page/myfile_data.html
@@ -1,19 +1,19 @@
 <!doctype html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap-table.css" rel="stylesheet" type="text/css">
-    <link href="css/zTreeStyle/zTreeStyle.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/info-mgt.css" />
+    <link href="statics/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="statics/assets/css/bootstrap-table.css" rel="stylesheet" type="text/css">
+    <link href="statics/assets/css/zTreeStyle/zTreeStyle.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="statics/assets/css/base.css" />
+    <link rel="stylesheet" href="statics/assets/css/info-mgt.css" />
     <style>
         .tree_left{box-sizing:border-box;overflow-y: auto;width:19%;border: 1px #c1d3de solid;margin-right: 1%;border-top:none;}
         .tree_left h6,.tree_right h6{line-height: 30px;font-weight: bold;padding-left: 6px ;color: #000;font-size: 14px}
         .tree_left_top{margin: 6px}
         .tree_input input{border: 1px #ccc solid;margin:3px 0 0 10px;border-radius: 4px;
         }
-        .layui-layer-title{background:url(images/righttitlebig.png) repeat-x;font-weight:bold;color:#46647e; border:1px solid #c1d3de;height: 33px;line-height: 33px;}
+        .layui-layer-title{background:url(statics/assets/images/righttitlebig.png) repeat-x;font-weight:bold;color:#46647e; border:1px solid #c1d3de;height: 33px;line-height: 33px;}
         .tabe_bot label{width: 70px;text-align: right;font-size: 14px;font-weight: 900;color: #46647e}
         .l_left{float: left}
         .tabe_bot input,.tabe_bot  select{width: 180px;height: 30px;border-radius: 6px;margin:0 20px 0 0;border: none;border: 1px #ccc solid}
@@ -27,25 +27,27 @@
 
     <script src="js/jquery.js"></script>
 
-    <title>私人资料</title>
+    <title th:text="${personalFile.name}"></title>
 </head>
 
 <body onload="Myfileload()">
-<div class="title"><h2>私人资料</h2></div>
-
+<div class="title" ><h2 th:text="${personalFile.name}"></h2></div>
+<span id="typess" style="display: none;" th:text="${personalFile.type}"></span>
+<span id="flietype" style="display: none;" th:text="${personalFile.fileType}"></span>
 <div class="l_left" style="width: 100%">
     <div class="query">
         <div class="tabe_bot">
             <div class="l_left" style="margin-left: 20px"><label>文件名称：</label><input type="text" placeholder="请输入制度名称" id="name"></div>
-            <div class="l_left"><label>文件类型：</label><select id="type"></select></div>
+            <!--<div class="l_left"><label>文件类型：</label><select id="type"></select></div>-->
             <button class="tabe_btn " onclick="getData()">查询</button>
             <div class="clear"></div>
         </div>
     </div>
     <div class="table-operate ue-clear">
-        <a href="javascript:;" class="add"  style=" background:url(images/tjico_up.png) no-repeat left 9px;">上传</a>
-        <a href="javascript:;" class="edit" style=" background:url(images/tjico_down.png) no-repeat left 9px;" onclick="down(id)">下载</a>
-        <a href="javascript:;" class="del" onclick="del(id)">删除</a>
+        <a href="javascript:;" class="add" onclick="addFile()"  style=" background:url(statics/assets/images/tjico_up.png) no-repeat left 9px;">上传</a>
+        <input type="file" id="file" name="file" onchange="fileUpload()" style="display:none;"/>
+        <!--<a href="javascript:;" class="edit" style=" background:url(statics/assets/images/tjico_down.png) no-repeat left 9px;" onclick="down(id)">下载</a>-->
+        <!--<a href="javascript:;" class="del" onclick="del(id)">删除</a>-->
 
 
     </div>
@@ -55,12 +57,39 @@
     <div class="pagination ue-clear"></div>
 </div>
 </body>
-<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="statics/libs/jquery.min.js"></script>
 
-<script src="js/myfile_data.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/bootstrap-table.js"></script>
-<script src="js/bootstrap-table-zh-CN.min.js"></script>
+<script src="statics/assets/js/myfile_data.js"></script>
+<script src="statics/assets/js/bootstrap.min.js"></script>
+<script src="statics/assets/js/bootstrap-table.js"></script>
+<script src="statics/assets/js/bootstrap-table-zh-CN.min.js"></script>
+<script>
+    function addFile(){
+        $('#file').click();
+    }
 
+    function fileUpload() {
+        var formdata = new FormData();
+        formdata.append("file", $('#file')[0].files[0]);
+        $.ajax({
+            type: "POST",
+            url: "fileManage/fileUpload/"+$('#typess').html()+"/"+$('#flietype').html(),
+            data: formdata,
+            contentType: false, // 不设置内容类型
+            processData: false, // 不处理数据
+            dataType: "json",
+            success: function (result) {
+                if (result.code == 100) {
+                    console.log("上传成功！")
+                    $dataTableHot.bootstrapTable('refresh');
+                } else {
+                    console.log(result.message);
+                }
+            }
+        });
+    }
+
+
+</script>
 
 </html>
