--- a/iters-web/src/main/resources/templates/page/notic_tail.html
+++ b/iters-web/src/main/resources/templates/page/notic_tail.html
@@ -386,7 +386,7 @@
         });
     }
     var id = window.parent.document.getElementById("id").value;
-    if (!!id) {
+    if (!!id) {debugger;
         $.ajax({
             type: "GET",
             url: "publish/query/" + id,
