--- a/iters-web/src/main/resources/templates/page/work.html
+++ b/iters-web/src/main/resources/templates/page/work.html
@@ -19,6 +19,7 @@
 <body onload="Workload()">
 <div class="title"><h2>工作日志</h2></div>
 <div class="query">
+    <input type="text" id="id" style="display: none" value>
     <div class="tabe_bot">
         <div class="l_left"><label>日志标题：</label><input type="text" placeholder="请输入标题" id="tit"></div>
         <div class="l_left"><label>发布人：</label><input type="text" placeholder="请输入姓名" id="person"></div>
@@ -31,7 +32,7 @@
     <a href="#" class="add"  onclick="addWork()">添加</a>
 <!--    <a href="#" class="delete"  onclick="delWork()">删除</a>-->
     <a href="javascript:;" class="out" onclick="outWork()">导出</a>
-    <a href="javascript:;" class="edit" onclick="editWork()">编辑</a>
+    <!--<a href="javascript:;" class="edit" onclick="openlayer(id)">编辑</a>-->
     <a href="javascript:;" class="count">统计</a>
     <a href="javascript:;" class="check">审核</a>
 </div>
@@ -46,6 +47,7 @@
 <script src="statics/assets/js/bootstrap-table.js"></script>
 <script src="statics/assets/js/bootstrap-table-zh-CN.min.js"></script>
 <script src="statics/assets/js/date/js/laydate.js"></script>
+<script type="text/javascript" src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
 <script src="statics/assets/js/work.js"></script>
 
 <script>
@@ -53,22 +55,5 @@
         laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
         laydate({elem: '#demo'});//绑定元素
     }();
-</script>
-<script src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
-<script type="text/javascript">
-    function openlayer(id){
-        layer.open({
-            type: 2,
-            title: '通知信息',
-            shadeClose: true,
-            shade: 0.5,
-            skin: 'layui-layer-rim',
-            closeBtn: 2,
-            area: ['98%', '98%'],
-            shadeClose: true,
-            closeBtn: 2,
-            content:"work_tail"
-        });
-    }
 </script>
 </html>
