--- a/iters-web/src/main/resources/templates/page/notic_tail.html
+++ b/iters-web/src/main/resources/templates/page/notic_tail.html
@@ -353,7 +353,7 @@
         laydate({ elem: '#demo1' });
         laydate({ elem: '#demo2' });//绑定元素
     }();
-    function button() {
+    function button() {debugger;
         var id = $('#no').val()
         var title = $('#title').val();
         var depId = $('#depId').attr("data-id");
