--- a/iters-web/src/main/resources/templates/page/locationStatic.html
+++ b/iters-web/src/main/resources/templates/page/locationStatic.html
@@ -5,7 +5,7 @@
 <title>酒店日统计</title>
 
 
-    <link href="css/all.css" rel="stylesheet" type="text/css">
+    <link href="statics/assets/css/all.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -47,8 +47,8 @@
     </p>
     <p class="book_foot"><input type="button" value="导出"/><input type="button" value="打印"/><input type="button" value="关闭"/></p>
 </div>
-<script  src="js/jquery.js"></script>
-<script  src="js/echarts/echarts.js"></script>
+<script  src="statics/assets/js/jquery.js"></script>
+<script  src="statics/assets/js/echarts/echarts.js"></script>
 <script >
     $(function(){
         var myChart = echarts.init($("#chart")[0]);
