--- a/iters-web/src/main/resources/statics/assets/css/login.css
+++ b/iters-web/src/main/resources/statics/assets/css/login.css
@@ -59,13 +59,14 @@ a.logo{
     background-size: 167px 42px;
 }
 .message {
-    margin: 10px 0 0 -58px;
+    margin: 10px 0 0 -48px;
     padding: 18px 10px 18px 60px;
     background: #2a83cf;
     position: relative;
     color: #fff;
     font-size: 18px;
     font-weight: bold;
+    text-align: center;
 }
 #darkbannerwrap {
 
