--- a/iters-web/src/main/resources/templates/page/work.html
+++ b/iters-web/src/main/resources/templates/page/work.html
@@ -15,7 +15,6 @@
     </style>
     <title>工作日志</title>
 </head>
-
 <body onload="Workload()">
 <div class="title"><h2>工作日志</h2></div>
 <div class="query">
@@ -33,7 +32,7 @@
 <!--    <a href="#" class="delete"  onclick="delWork()">删除</a>-->
     <a href="javascript:;" class="out" onclick="outWork()">导出</a>
     <!--<a href="javascript:;" class="edit" onclick="openlayer(id)">编辑</a>-->
-    <a href="javascript:;" class="count">统计</a>
+    <a href="locationStatic" class="count" onclick="addStatistics()">统计</a>
     <a href="javascript:;" class="check">审核</a>
 </div>
 <div class="table-box">
