--- a/iters-web/src/main/resources/templates/page/work.html
+++ b/iters-web/src/main/resources/templates/page/work.html
@@ -32,7 +32,7 @@
 <!--    <a href="#" class="delete"  onclick="delWork()">删除</a>-->
     <a href="javascript:;" class="out" onclick="outWork()">导出</a>
     <!--<a href="javascript:;" class="edit" onclick="openlayer(id)">编辑</a>-->
-    <a href="locationStatic" class="count" onclick="addStatistics()">统计</a>
+    <a href="locationStatic" class="count" onclick="clickStatistics()">统计</a>
     <a href="javascript:;" class="check">审核</a>
 </div>
 <div class="table-box">
