统计部门数据功能

--- a/iters-web/src/main/resources/templates/page/locationStatic.html
+++ b/iters-web/src/main/resources/templates/page/locationStatic.html
@@ -24,7 +24,7 @@
     </tr>
     <tr>
         <td><label class="td_label">所有部门发表文章的总数</label></td>
-        <td colspan="3" >${key}篇</td>
+        <td colspan="3" id="dep_Num" >篇</td>
     </tr>
     <tr>
         <td><label class="td_label">开始时间</label></td>
@@ -50,6 +50,7 @@
 <script  src="statics/assets/js/jquery.js"></script>
 <script  src="statics/assets/js/echarts/echarts.js"></script>
 <script src="statics/assets/js/locationStatic.js"></script>
+<script src="statics/assets/js/work.js"></script>
 <script >
     $(function(){
         var myChart = echarts.init($("#chart")[0]);
